# devlpulse

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  fly.toml  schema.h  security.h  seed_demo.sql
src/: main.cpp
src/db/: schema.h
src/services/: github_service.cpp  github_service.h  user_service.cpp  user_service.h  ws_manager.h
src/utils/: security.h
web/css/: main.css
web/html/: 404.html  dashboard.html  embed.html  index.html  profile.html
web/js/: api.js  dashboard.js  embed.js  profile.js
